<resources>
    <string name="app_name">Droid SQLite</string>
    <string name="add_customer_text">Provide below details to add a customer</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="company">Company</string>
    <string name="add_customer_button">Add New Customer.</string>
    <string name="first_name_blank">Please enter your first name.</string>
    <string name="last_name_blank">Please enter your last name.</string>
    <string name="email_blank">Please enter your email.</string>
    <string name="phone_blank">Please enter your phone no.</string>
    <string name="company_blank">Please enter company name.</string>
    <string name="toast_message">Customer has been saved successfully.</string>
    <string name="toast_error_message">There is some issue in saving customer information.</string>
    <string name="dialog_customer_save">Saving customer info..</string>
</resources>
