<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.kjoshi.droidsqlite.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/addCustomerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/add_customer_text"

        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/customerFormLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addCustomerTextView"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/firstNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/firstNameEditText"
                style="@style/NameEditTextStyle"
                android:hint="@string/first_name" />

            <requestFocus />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lastNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/lastNameEditText"
                style="@style/NameEditTextStyle"
                android:hint="@string/last_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailEditText"
                style="@style/emailInputStyle"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phoneEditText"
                style="@style/phoneInputStyle"
                android:hint="@string/phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/companyInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/companyEditText"
                style="@style/companyNameStyle"

                android:hint="@string/company" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/addCustomerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/companyInputLayout"
            android:layout_marginTop="10dp"
            android:text="@string/add_customer_button"
            android:textColor="@color/textColorPrimary"
            android:textSize="22sp" />
    </LinearLayout>


</RelativeLayout>
